--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/thekatcodes/B12Give-challenge#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "uuid": "^9.0.0"
   }
